[gd_scene load_steps=5 format=2]

[ext_resource path="res://lib/Turret.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 21.6287, 22.0748 )

[node name="Turret" type="KinematicBody2D"]

position = Vector2( 55.2136, 37.6254 )
input_pickable = false
collision_layer = 4
collision_mask = 2
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}
detect_radius = 250
fire_rate = 0.2
Bullet = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Visibility" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility" index="0"]

[node name="ShootTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]

[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]


